Until binary classification example

--- a/biblio.bib
+++ b/biblio.bib
@@ -3,9 +3,18 @@
   url = {http://dx.doi.org/10.1002/9783527618279},
   year  = {2003},
   month = {aug},
-  publisher = {Wiley-{VCH} Verlag {GmbH}},
+  publisher = {Wiley-{VCH} Verlag {GmbH} Co.},
   editor = {Johann Gasteiger},
   title = {Handbook of Chemoinformatics}
+}
+@book{Gasteiger_Engel_2003,
+  doi = {10.1002/3527601643},
+  url = {http://dx.doi.org/10.1002/3527601643},
+  year  = {2003},
+  month = {sep},
+  publisher = {Wiley-{VCH} Verlag {GmbH} {\&} Co. {KGaA}},
+  editor = {Johann Gasteiger and Thomas Engel},
+  title = {Chemoinformatics: A textbook}
 }
 @book{Junker_2008,
   doi = {10.1002/9780470253489},
@@ -32,10 +41,160 @@
   author = {Olivier Lezoray and Leo Grady},
   title = {Image Processing and Analysis with Graphs: Theory and Practice (Digital Imaging and Computer Vision)}
 }
-@Book{Garey_1979,
+@book{Garey_1979,
   isbn = {0716710455},
   year = {1979},
   publisher = {W.H. Freeman and Co.},
   author = {Michael R. Garey and David S. Johnson},
   title = {Computers and intractability : a guide to the theory of NP-completeness}
+}
+@inproceedings{Bach_2008,
+  title={Graph kernels between point clouds},
+  author={Bach, Francis R},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={25--32},
+  year={2008},
+  organization={ACM}
+}
+@article{Sanfeliu_1983,
+  title={A distance measure between attributed relational graphs for pattern recognition},
+  author={Sanfeliu, Alberto and Fu, King-Sun},
+  journal={Systems, Man and Cybernetics, IEEE Transactions on},
+  number={3},
+  pages={353--362},
+  year={1983},
+  publisher={IEEE}
+}
+@article{Bunke_1983,
+  title={Inexact graph matching for structural pattern recognition},
+  author={Bunke, Horst and Allermann, Gudrun},
+  journal={Pattern Recognition Letters},
+  volume={1},
+  number={4},
+  pages={245--253},
+  year={1983},
+  publisher={Elsevier}
+}
+@article{Messmer_1998,
+  title={A new algorithm for error-tolerant subgraph isomorphism detection},
+  author={Messmer, Bruno T and Bunke, Horst},
+  journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+  volume={20},
+  number={5},
+  pages={493--504},
+  year={1998},
+  publisher={IEEE}
+}
+@article{Neuhaus_2005,
+  title={Self-organizing maps for learning the edit costs in graph matching},
+  author={Neuhaus, Michel and Bunke, Horst},
+  journal={Systems, Man, and Cybernetics, Part B: Cybernetics, IEEE Transactions on},
+  volume={35},
+  number={3},
+  pages={503--514},
+  year={2005},
+  publisher={IEEE}
+}
+@book{Todeschini_2008,
+  title={Handbook of molecular descriptors},
+  author={Todeschini, Roberto and Consonni, Viviana},
+  year={2008},
+  publisher={John Wiley \& Sons}
+}
+@article{Wiener_1947,
+  title={Structural determination of paraffin boiling points},
+  author={Wiener, Harry},
+  journal={Journal of the American Chemical Society},
+  volume={69},
+  number={1},
+  pages={17--20},
+  year={1947},
+  publisher={ACS Publications}
+}
+@article{Morgan_1965,
+  title={The Generation of a Unique Machine Description for Chemical Structures-A Technique Developed at Chemical Abstracts Service.},
+  author={Morgan, HL},
+  journal={Journal of Chemical Documentation},
+  volume={5},
+  number={2},
+  pages={107--113},
+  year={1965},
+  publisher={ACS Publications}
+}
+@article{Gutman_1972,
+  doi = {10.1016/0009-2614(72)85099-1},
+  url = {http://dx.doi.org/10.1016/0009-2614(72)85099-1},
+  year  = {1972},
+  month = {dec},
+  publisher = {Elsevier {BV}},
+  volume = {17},
+  number = {4},
+  pages = {535--538},
+  author = {Ivan Gutman and Nenad Trinajstic},
+  title = {Graph theory and molecular orbitals. Total $\pi$-electron energy of alternant hydrocarbons},
+  journal = {Chemical Physics Letters}
+}
+@inproceedings{Agrawal_1994,
+  isbn = {1-55860-153-8},
+  url = {http://dl.acm.org/citation.cfm?id=645920.672836},
+  author = {Agrawal, Rakesh and Srikant, Ramakrishnan},
+  title = {Fast Algorithms for Mining Association Rules in Large Databases},
+  booktitle = {Proceedings of the 20th International Conference on Very Large Data Bases},
+  series = {VLDB '94},
+  year = {1994},
+  pages = {487--499},
+  numpages = {13},
+  acmid = {672836},
+  publisher = {Morgan Kaufmann Publishers Inc.},
+  address = {San Francisco, CA, USA},
+}
+@incollection{Inokuchi_2000,
+  title={An apriori-based algorithm for mining frequent substructures from graph data},
+  author={Inokuchi, Akihiro and Washio, Takashi and Motoda, Hiroshi},
+  booktitle={Principles of Data Mining and Knowledge Discovery},
+  pages={13--23},
+  year={2000},
+  publisher={Springer}
+}
+@inproceedings{Han_2000,
+  title={Mining frequent patterns without candidate generation},
+  author={Han, Jiawei and Pei, Jian and Yin, Yiwen},
+  booktitle={ACM SIGMOD Record},
+  volume={29},
+  number={2},
+  pages={1--12},
+  year={2000},
+  organization={ACM}
+}
+@inproceedings{Yan_2002,
+  title={gspan: Graph-based substructure pattern mining},
+  author={Yan, Xifeng and Han, Jiawei},
+  booktitle={Data Mining, 2002. ICDM 2003. Proceedings. 2002 IEEE International Conference on},
+  pages={721--724},
+  year={2002},
+  organization={IEEE}
+}
+@article{Nijssen_2005,
+  title={The gaston tool for frequent subgraph mining},
+  author={Nijssen, Siegfried and Kok, Joost N},
+  journal={Electronic Notes in Theoretical Computer Science},
+  volume={127},
+  number={1},
+  pages={77--87},
+  year={2005},
+  publisher={Elsevier}
+}
+@article{Scholkopf_2002,
+  title={Learning with kernels},
+  author={Scholkopf, Bernhard and Smola, Alexander J},
+  journal={MIT Press},
+  volume={11},
+  pages={110--146},
+  year={2002}
+}
+@book{Scholkopf_2004,
+  title={Kernel methods in computational biology},
+  author={Sch{\"o}lkopf, Bernhard and Tsuda, Koji and Vert, Jean-Philippe},
+  year={2004},
+  publisher={MIT press}
 }
