--- a/introduction.tex
+++ b/introduction.tex
@@ -5,7 +5,7 @@
 
 امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده\پانوشت{data} روبرو است. شرکت‌های تجاری، مراکز علمی و مؤسسات تحقیقاتی سعی دارند از این داده‌ها در جهت برآوردن نیاز مشتریان، درک بهتر جهان هستی و ساخت تکنولوژی‌های جدید بهره ببرند. استفاده از این داده‌ها جز با استخراج دانش از آن‌ها ممکن نیست. طراحی روش و الگوریتم  برای استنتاج قواعد کلی از یک سری داده مشاهده شده موضوع اصلی یادگیری ماشین است.
 
-داده یک مفهوم قراردادی و وابسته به دامنه\پانوشت{domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا برداری\پانوشت{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که هر عنصر از این بردار نمایش‌دهنده میزان تکرار یک کلمه است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
+داده یک مفهوم قراردادی و وابسته به دامنه\پانوشت{domain} است. از این‌رو برای نمایش آن، روش‌های مختلفی وجود دارد: در بعضی کاربردها، کافی است داده‌ها را به صورت عددی یا برداری\پانوشت{vector} از اعداد نمایش داد. اما در برخی موارد، نمایش سطح بالاتری برای بیان حق مطلب مورد نیاز است. برای مثال، اگر بخواهیم موضوع یک متن را بر اساس تکرار کلمات پیش‌بینی کنیم، کافی است یک بردار عددی تشکیل دهیم که عناصر این بردار نمایش‌دهنده میزان تکرار کلمات از پیش تعیین شده در آن متن است. اما اگر بخواهیم بین رفتار یک مولکول با ساختار آن رابطه‌ای برقرار کنیم، آنگاه نمی‌توان به سادگی مولکول را یک عدد یا برداری از اعداد در نظر گرفت. ساختار مولکول و همچنین بسیاری دیگر از داده‌ها معمولاً با بهره‌گیری از گراف‌ها مدل می‌شود.
 
 گراف ابزاری ساده و انعطاف‌پذیر برای توصیف اشیاء و ارتباط بین آن‌هاست. یک گراف از یک مجموعه گره‌\پانوشت{node} و یک مجموعه یال‌\پانوشت{edge} که ارتباط بین گره‌ها را معین می‌کند تشکیل می‌شود. معمولاً  گره‌ها، موجودیت‌ها و یال‌ها، ارتباط بین موجودیت‌ها را نمایش می‌دهند. به عنوان مثال، می‌توان یک شبکه اجتماعی را با استفاده از گراف مدل کرد: مجموعه گره‌ها، مجموعه اعضای این شبکه و هر یال بین دو گره، نشان‌دهنده ارتباط دو عضو متناظر در آن شبکه اجتماعی است؛ به همین ترتیب می‌توان یک مولکول را با یک گراف مدل کرد: مجموعه گره‌ها، مجموعه اتم‌های آن مولکول و هر یال بین دو گره نمایانگر وجود یک پیوند بین اتم‌های متناظر است. همانطور که از این دو مثال مشخص است گاهی موجودیت مورد مطالعه، یک گره در یک گراف است و ارتباط آن با دیگر عناصر در یک سیستم بزرگتر نمایش‌داده می‌شود و گاه کل یک گراف نمایشی از یک موجودیت است که در این حالت، گره‌ها و یال‌ها نمایش‌دهنده عناصر سازنده آن موجودیت هستند.
 
@@ -19,10 +19,10 @@
 
 علاوه بر این رشته‌ها، گراف‌ها در تحلیل شبکه‌های اجتماعی\جستار{Carrington_2005}، پردازش تصویر\جستار{Lezoray_2012} و تحلیل شبکه‌ جهانی وب مورد استفاده گسترده قرار می‌گیرند.
 
-درست است که گراف تصویر روشن و ملموسی از داده بدست می‌دهد، اما این ویژگی هزینه خود را دارد: بسیاری از عمل‌ها\پانوشت{operations} که برای ساختارهایی نظیر آرایه و ماتریس بدیهی هستند، در گراف تعریف نشده و یا پیچیده‌اند. برای مثال می‌توان به رابطه تساوی اشاره کرد. هیچ الگوریتمی برای تست برابری دو گراف وجود ندارد که در زمان خطی قابل اجرا باشد\جستار{Garey_1979}.
+درست است که گراف تصویر روشن و ملموسی از داده بدست می‌دهد، اما این ویژگی هزینه خود را دارد: بسیاری از عمل‌ها\پانوشت{operations} که برای ساختارهایی نظیر آرایه و ماتریس بدیهی هستند، برای گراف تعریف نشده و یا پیچیده‌اند. برای مثال می‌توان به رابطه تساوی اشاره کرد. هیچ الگوریتمی برای تست برابری دو گراف وجود ندارد که در زمان خطی قابل اجرا باشد\جستار{Garey_1979}.
 
 اکثر تکنیک‌های قوی در یادگیری ماشین با داده‌های برداری که نمایش دهنده نقاط در فضای اقلیدسی هستند، کار می‌کنند و به روشی برای اندازه‌گیری شباهت بین این نقاط نیاز دارند. به همین دلیل، تحقیقات روی گراف‌ها و یادگیری ماشین بیشتر به سمت نمایش گراف‌ها در قالب بردار در فضای اقلیدسی (و یا فضاهای برداری دیگر) گرایش دارد. هرچند نحوه تبدیل گراف به بردار یا ساختارهای دیگر، وابسته به موضوع مورد مطالعه است، اما طرح روشی که عمومیت و انعطاف‌پذیری داشته باشد مورد توجه قرار خواهد گرفت.
 
 در این پایان‌نامه برآنیم که مشکلات روش‌های پیشین برای اندازه‌گیری میزان شباهت دو گراف را شرح دهیم و روش بهتری به همین منظور ارائه کنیم.
 
-در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه گراف، ساختمان‌داده‌ گرافی، مقایسه گراف‌ها، روش تابع کرنل\پانوشت{kernel method} در یادگیری ماشین و توابع کرنل گرافی\پانوشت{graph kernels} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian_graphlet_kernel} تابع گرافلت کرنل گاوسی\پانوشت{gaussian graphlet kernel} را معرفی می‌کنیم و به بررسی و مقایسه آن با توابع کرنل گرافی پیشین می‌پردازیم و در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را می‌سنجیم.
+در فصل \ارجا{chap:prerequisites} بطور مختصر نظریه گراف، ساختمان‌داده‌ گرافی، مقایسه گراف‌ها، روش تابع کرنل\پانوشت{\متن‌لاتین{kernel method}} در یادگیری ماشین و توابع کرنل گرافی\پانوشت{\متن‌لاتین{graph kernels}} را بررسی می‌کنیم. در فصل \ارجا{chap:gaussian_graphlet_kernel} تابع گرافلت کرنل گاوسی\پانوشت{\متن‌لاتین{gaussian graphlet kernel}} را معرفی می‌کنیم و به بررسی و مقایسه آن با توابع کرنل گرافی پیشین می‌پردازیم و در فصل \ارجا{chap:protein_function_prediction} توانایی تابع گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین‌ها را می‌سنجیم.
