--- a/commands.tex
+++ b/commands.tex
@@ -37,6 +37,8 @@
 %\usepackage{makeidx}
 %\makeindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%
+\setcounter{secnumdepth}{3}
+%%%%%%%%%%%%%%%%%%%%%%%%%%
 % فراخوانی بسته زی‌پرشین و تعریف قلم فارسی و انگلیسی
 \usepackage{xepersian}
 \settextfont[Scale=1.15]{XB Niloofar}
@@ -44,7 +46,7 @@
 \setiranicfont[Scale=1.15]{XB Zar Oblique}
 % چنانچه می‌خواهید اعداد در فرمول‌ها، انگلیسی باشد، خط زیر را غیرفعال کنید
 %\setdigitfont{Yas}
-\setdigitfont[Scale=.85]{Persian Modern}
+%\setdigitfont[Scale=.85]{Persian Modern}
 %\setdigitfont[Scale=1.1]{XB Zar}
 %\KashidaOn
 %تنظیم فاصله‌ی خطوط و پاراگراف‌ها
@@ -75,7 +77,7 @@
 % تعریف و نحوه ظاهر شدن عنوان قضیه‌ها، تعریف‌ها، مثال‌ها و ...
 \theoremstyle{definition}
 \newtheorem{definition}{تعریف}[section]
-%\newtheorem{deduct}[definition]{}
+\newtheorem{deduct}[definition]{}
 \newtheorem{theorem}[definition]{قضیه}
 \newtheorem{lemma}[definition]{لم}
 \newtheorem{proposition}[definition]{گزاره}
@@ -101,6 +103,13 @@
 \newcommand{\X}{$X$}
 \newcommand{\A}{$A$}
 \newcommand{\mN}{\mathcal{N}}
+\newcommand{\mG}{\mathcal{G}}
+\newcommand{\mX}{\mathcal{X}}
+\newcommand{\mH}{\mathcal{H}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\N}{\mathbb{N}}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 % تعریف دستورات جدید برای خلاصه نویسی و راحتی کار در هنگام تایپ فرمول‌های ریاضی
 \newcommand{\mA}{\mathcal{A}}% مجموعه‌ی عامل‌ها
@@ -129,10 +138,6 @@
 \def\3{\textrm{\lr{3}}}
 \def\4{\textrm{\lr{4}}}
 \def\5{\textrm{\lr{5}}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\def\reduction{تحویل}
-\def\observation{مشاهده‌محور}
-\def\prior{پیشینی}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % براساس نسخه‌های از ۱.۲.۵ به بعد بسته‌ی bidi در توابع زیر باید توجه داشت:
 % که l یعنی شروع نوشتار از ابتدای خط یا جعبه،
